--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /Grain_Store_Management_System/nbproject/private/
 /Database_Connector/nbproject/private/
+/Grain_Store_Management_System/build/
+/Grain_Store_Management_System/dist/
