--- a/Grain_Store_Management_System/nbproject/project.properties
+++ b/Grain_Store_Management_System/nbproject/project.properties
@@ -35,9 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Grain_Store_Management_System
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-j-9.1.0.jar=C:\\Users\\Akila Pilapitiya\\Desktop\\mysql-connector-j-9.1.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-j-9.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
