--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 src/project/granix/db/DBConnection.java
 /src/project/granix/db
 src/project/granix/db/DBConnection.java
+src/project/granix/db/DBConnection.java
+src/project/granix/db/DBConnection.java
