--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 
+src/project/granix/db/DBConnection.java
+/src/project/granix/db
+src/project/granix/db/DBConnection.java
+src/project/granix/db/DBConnection.java
+src/project/granix/db/DBConnection.java
